# GKlib

./: .gitignore  CMakeLists.txt  GKlibConfig.cmake.in  GKlibSystem.cmake  gkregex.c
test/: CMakeLists.txt  gkuniq.c
